Main has two improvements - Have as much whitespace as you'd like! - Can call commands by their numbers - I tried for a while to implement up arrow   scroll through previous commands. Turns out   it's a lot more complicated than I thought.   Need to rejig the terminal, check out   this post: https://stackoverflow.com/questions/13410159/how-to-read-a-character-in-ocaml-without-a-return-key

--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -5,6 +5,9 @@ yojson
 ANSITerminal
 cohttp
 lwt
+cohttp-lwt-unix
+
+Note: Some of our UI functionalities require a Unix machine.
 
 Note yojson and ANSITerminal are part of the standard 3110 ocaml switch. 
 We installed cohttp and lwt by running this command in terminal:
