--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -15,6 +15,9 @@ We installed cohttp and lwt by running this command in terminal:
 $ opam install cohttp-lwt-unix cohttp-async
 (From https://github.com/mirage/ocaml-cohttp)
 
+You'll also then want to run:
+$ sudo apt-get install -y libgmp-dev  
+
 
 Once you've got all our dependencies, just type
 $ make run
